<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/LatitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/latLabel" />

            <TextView
                android:id="@+id/latitude_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/LongitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/lonLabel" />

            <TextView
                android:id="@+id/longitude_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/DistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/DistLabel" />

            <TextView
                android:id="@+id/distance_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/AVGSpeedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/AvgSpeedLabel" />

            <TextView
                android:id="@+id/avg_speed_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>
        <TableRow>

        <TextView
            android:id="@+id/AccuracyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/AccuracyLabel" />

        <TextView
            android:id="@+id/Accuracy_textResult"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />


        </TableRow><TableRow>

            <TextView
                android:id="@+id/StepsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/StepsLabel" />

            <TextView
                android:id="@+id/Steps_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>
        
        <TableRow>

        <TextView
            android:id="@+id/OrientationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/OrientLabel" />

        <TextView
            android:id="@+id/Orientation_textResult"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/StartServiceButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartServiceButton" />

    <Button
        android:id="@+id/StopServiceButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StopServiceButton" />

    <Button
        android:id="@+id/UpdateValuesButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UpdateValButton" />

    <Button
        android:id="@+id/AccuracyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AccuracyButton" />

    <Button
        android:id="@+id/ExitButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExitButton" />

</LinearLayout>